--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,17 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  dot_navigation_bar: ^1.0.2
   firebase_auth: ^4.17.5
   firebase_core: ^2.24.2
+  fl_chart: ^0.66.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
   flutter_screenutil: ^5.9.0
   google_fonts: ^6.1.0
+  iconly: ^1.0.1
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_lints: ^3.0.0
